source/assets/css/tim.css
/* ... */
/* Blog General */
.blog .list-group-item {
    background-color: #fefefe;
}
.blog {
    color: #232323;
}
.blog .text-muted {
    color: #767676;
}
.blog h1, .blog .h1,
.blog h2, .blog .h2,
.blog h3, .blog .h3,
.blog h4, .blog .h4,
.blog h5, .blog .h5,
.blog h6, .blog .h6 {
    color: #343434;
}
.blog h1 small, .blog .h1 small,
.blog h2 small, .blog .h2 small,
.blog h3 small, .blog .h3 small,
.blog h4 small, .blog .h4 small,
.blog h5 small, .blog .h5 small,
.blog h6 small, .blog .h6 small {
    color: #565656;
}
.blog .pager li>a {
    padding: 4px 8px;
}
.blog a.headerlink {
    color:#99d6c9;
}
.blog a.headerlink:hover {
    color:#78c3b3;
}
.blog .ad > * {
    padding:4px;
    border: 1px solid #179f83;
}
.blog .markdown-link {
    border-right: 10px solid #005496;
    border-left: 10px solid #005496;
    background: #addbff;
    color: #005496;
    padding: 4px 16px;
    width: 128px;
    transition: all 512ms cubic-bezier(0.28, 1.51, 0.54, 0.75);
}
.blog .markdown-link:hover {
    background: #2196f3;
    border-right: 3px solid #addbff;
    border-left: 3px solid #addbff;
    color: #eee;
}
.blog .group-link {
    display: inline;
    padding: .2em .6em .3em;
    font-size: 75%;
    font-weight: bold;
    line-height: 1;
    color: #fdfefd;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border: 1px solid #eee;
}
.post-group-lists h4 {
    margin: 2px;
}
.blog .tags .group-link {
    background-color: #1bbc9b;
}
.blog .featured {
    color: #34495e;
    background-color: #bcfc9a;
}
.blog .categories .group-link {
    background-color: #59ceb6;
}

/* Blog Jumbotron */
.blog .jumbotron {
    position: relative;
    perspective: 1000px;
    /*overflow: hidden;*/
    padding-top: 64px;
    background-color: #1bbc9b;
}
.blog .jumbotron {
    padding-right: 48px;
    padding-left: 48px;
}

.blog  .jumbotron h1, .jumbotron .h1,
.blog  .jumbotron h2, .jumbotron .h2,
.blog  .jumbotron h3, .jumbotron .h3,
.blog  .jumbotron h4, .jumbotron .h4,
.blog  .jumbotron h5, .jumbotron .h5,
.blog  .jumbotron h6, .jumbotron .h6 {
      color:#34495e!important;
}
.blog .jumbotron small {
    color: #336e7b!important;
}

.blog .jumbotron header {
    position: absolute;
    transform-origin: 33% 50%;
    z-index: 1000;
}
.blog .jumbotron header * {
    transform-origin: 33% 50%;
}
.blog .jumbotron .blank-header-for-spacing {
    opacity: 0;
    z-index: -1000;
}
.blog .jumbotron h1,
.blog .jumbotron h2 {
    margin: 0px;
}

.blog .jumbotron .post-group-lists {
    position: absolute;
}
.blog .jumbotron .post-group-lists * {
    transform-origin: 10% 50%;
}

/*.blog * {
    border: 1px dashed rgba(256,256,256,0.5);
}*/

/* Blog animations */
.blog .blog-nav {
    animation: introDnIn 512ms ease-in-out 0s 1 both;
}
.blog footer {
    animation: introUp 1024ms ease-in-out 0s 1 both;
}
.blog #page {
    animation: introOut 768ms ease-in-out 0ms 1 both;
}
.blog #postpage {
    animation: introDn 1024ms ease-in-out 768ms 1 both;
}
.blog .jumbotron header *:nth-child(1) { animation: tilt 1024ms ease-in-out 128ms 1 both;}
.blog .jumbotron header *:nth-child(2) { animation: tilt 1024ms ease-in-out 256ms 1 both;}
.blog .jumbotron header *:nth-child(3) { animation: tilt 1024ms ease-in-out 512ms 1 both;}

.blog .jumbotron .blank-header-for-spacing *:nth-child(1) { animation: tilt 1024ms ease-in-out 128ms 1 both;}
.blog .jumbotron .blank-header-for-spacing *:nth-child(2) { animation: tilt 1024ms ease-in-out 256ms 1 both;}
.blog .jumbotron .blank-header-for-spacing *:nth-child(3) { animation: tilt 1024ms ease-in-out 512ms 1 both;}

.blog .jumbotron .post-group-lists ul:nth-child(1) { animation: introDnInRot 1024ms ease-in-out  512ms 1 both;}
.blog .jumbotron .post-group-lists ul:nth-child(2) { animation: introDnInRot 1024ms ease-in-out  768ms 1 both;}
.blog .jumbotron .post-group-lists ul:nth-child(3) { animation: introDnInRot 1024ms ease-in-out 1024ms 1 both;}

@keyframes introDnIn {
    0%   {opacity: 0; transform: scale(1.3) translateY(-64px);}
    100% {opacity: 1; transform: scale(1.0) translateY(  0px);}
}
@keyframes introDnInRot {
    0%   {opacity: 0; transform: scale(1.3) translateY(64px) rotateY(90deg);}
    100% {opacity: 1; transform: scale(1.0) translateY( 0px) rotateY( 0deg);}
}
@keyframes introUp {
    0%   {opacity: 0; transform: scale(0.98) translateY(32px);}
    100% {opacity: 1; transform: scale(1.00) translateY( 0px);}
}
@keyframes introDn {
    0%   {opacity: 0; transform: scale(1.07) translateY(32px);}
    100% {opacity: 1; transform: scale(1.00) translateY( 0px);}
}
@keyframes introOut {
    0%   {opacity: 0; transform: scale(0.95) translateY(10px);}
    100% {opacity: 1; transform: scale(1.00) translateY( 0px);}
}
@keyframes tilt {
    0%   {transform: translateX( 0px) translateY(-128px) rotateY(90deg);}
    100% {transform: translateX(0px) translateY(  0px) rotateY(0deg);}
    /*100% {transform: translateX(16px) translateY(  -8px) rotateY(20deg);}*/
}

#post-social-list li:hover {
    animation: popdown 256ms ease-in-out 0s 1 both;
}
@keyframes popdown {
    0%   {transform: translateY(0px)}
    33%  {transform: translateY(8px)}
    66%  {transform: translateY(-4px)}
    100% {transform: translateY(0px)}
}

.group-item {
    float:left;
    position: relative;
    width: 46%;
    padding-bottom : 46%;
    margin:1.66%;
}
@media (min-width: 992px) {
    .group-item {
        float: left;
        position: relative;
        width: 30%;
        padding-bottom : 30%;
        margin:1.66%;
    }
}
.group-item > div {
    position: absolute;
    text-align: center;
    height: 90%;
    width: 90%;
    padding: 5%;
    background-color:#bbebe1;
    border-color:#4a7f8b;
}
.group-item > div:hover {
    animation: popone 256ms ease-in-out 0s 1 both;
}
@keyframes popone {
    0%   {transform: scale(1.00)}
    15%  {transform: scale(0.98)}
    85%  {transform: scale(1.02)}
    100% {transform: scale(1.00)}
}
/* ... */

